--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "From Scripts to Serenity",
   "main": "index.js",
   "scripts": {
+    "pretest": "serenity update",
+    "report":  "serenity run",
     "preprotractor": "webdriver-manager update --standalone --versions.standalone 3.0.1",
     "protractor": "protractor ./protractor.conf.js",
     "test": "npm run protractor --silent"
@@ -34,8 +36,12 @@
     "glob": "7.1.2",
     "protractor": "5.1.2",
     "protractor-cucumber-framework": "3.1.2",
+    "serenity-cli": "0.11.3",
     "ts-node": "3.0.6",
     "tslint": "5.4.3",
     "typescript": "2.4.0"
+  },
+  "dependencies": {
+    "serenity-js": "1.10.13"
   }
 }
