--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "From Scripts to Serenity",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf target",
     "pretest": "serenity update",
-    "report":  "serenity run",
+    "report": "serenity run",
     "preprotractor": "webdriver-manager update --standalone --versions.standalone 3.0.1",
     "protractor": "protractor ./protractor.conf.js",
-    "test": "npm run protractor --silent"
+    "test": "failsafe clean protractor report"
   },
   "repository": {
     "type": "git",
@@ -34,8 +35,10 @@
     "chai-as-promised": "7.0.0",
     "cucumber": "1.3.2",
     "glob": "7.1.2",
+    "npm-failsafe": "0.4.1",
     "protractor": "5.1.2",
     "protractor-cucumber-framework": "3.1.2",
+    "rimraf": "3.0.0",
     "serenity-cli": "0.11.3",
     "ts-node": "3.0.6",
     "tslint": "5.4.3",
